--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: JARK006
 description: Record my every progress.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/avatar.png
+avatar: https://raw.githubusercontent.comjark006/jark006.github.io/master/images/avatar.png
 
 #
 # Flags below are optional
