--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: JARK006
 description: Record my every progress.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/jark006/jark006.github.io/raw/master/images/avatar.png
+avatar: https://avatars.githubusercontent.com/u/21077255?v=4
 #
 # Flags below are optional
 #
