--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://jark006.github.io
+# url: https://jark006.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "https://jark006.github.io"
+# baseurl: "https://jark006.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -83,5 +83,3 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
-
-theme: jekyll-theme-midnight
