--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: JARK006
 
 # Short bio or description (displayed in the header)
-description: Record my every progress.
+description: Record something
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/21077255?v=4
@@ -46,7 +46,7 @@ url: https://jark006.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "https://jark006.github.io"
+# baseurl: "https://jark006.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
