--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: JARK006
 
 # Short bio or description (displayed in the header)
-description: Record something
+description: 博客
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/21077255?v=4
@@ -33,7 +33,8 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: jark006
+# 文章评论功能
+# disqus: jark006
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
@@ -46,7 +47,7 @@ url: https://jark006.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-# baseurl: "https://jark006.github.io"
+# baseurl: 
 
 #
 # !! You don't need to change any of the configuration flags below !!
